--- a/css/main.css
+++ b/css/main.css
@@ -1,25 +1,25 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.container-header{
+.container-header {
     text-align: center;
 }
 
-.container-header h1{
+.container-header h1 {
     color: rgb(209, 58, 83);
     font-size: 45px;
     margin: 25px;
 }
 
-.container-header p{
+.container-header p {
     font-size: 17px;
     margin: 40px;
 }
 
-.container{
+.container {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -27,18 +27,18 @@
     margin: 20px 20px;
 }
 
-.card{
+.card {
     display: flex;
     background-color: black;
     width: calc((100% / 3) - 60px);
-    
+
 }
 
-.card-text  {
+.card-text {
     width: 100%;
     font-size: 16px;
     color: white;
-    text-align:start;
+    text-align: start;
     padding: 5px 15px;
     display: flex;
     flex-direction: column;
@@ -47,23 +47,48 @@
     gap: 10px;
 }
 
-.card-text span{
+.card-text span {
     display: block;
-    
+
 }
 
 .card-img {
     width: 45%;
 }
 
-.card-img img{
+.card-img img {
     width: 100%;
 }
 
-a{
+a {
     color: rgba(10, 162, 162, 0.704);
     text-decoration: none;
 }
 
+/* regole per tablet */
+@media screen and (max-width: 1050px) {
 
+    .container{
+        gap: 40px;
+        row-gap: 60px; 
+    }
 
+    .card{
+        display: flex;
+        background-color: black;
+        width: calc((100% - 40px) / 2);
+    }
+}
+
+@media screen and (max-width: 767px) {
+
+    .container{
+        flex-direction: column;
+        gap: 40px;
+    }
+
+    .card{
+        width: calc(100% - 40px);
+        margin: 0 20px;
+    }
+}
